Confirme component styled

--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,3 +1,4 @@
 $color__background--primary: #00506A;
 $color__background--secondary: #00A7DE;
 $color__font--primary: #fff;
+$color__font--highlight: #A9FF49;
