--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,6 +1,31 @@
 * { box-sizing: border-box }
+
 body {
   background-color: $color__background--primary;
   color: $color__font--primary;
   font-family: Arial, sans-serif;
+}
+:global {
+  .btn {
+    border: 1px solid;
+    background-color: transparent;
+    @include border-radius(1rem);
+    padding: 0.5rem 1rem;
+    margin: 0 0.5rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    transition: all 300ms;
+    cursor: pointer;
+    &--white {
+      border-color: #fff;
+      color: #fff;
+      background-color: transparent;
+      &:hover {
+        border-color: transparent;
+        color: $color__background--primary;
+        background-color: #fff;
+      }
+    }
+  }
 }
