--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,5 +1,6 @@
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
   border-radius: $radius;
+  overflow: hidden;
   background-clip: padding-box;  /* stops bg color from leaking outside the border: */
 }
