--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -4,3 +4,9 @@
   overflow: hidden;
   background-clip: padding-box;  /* stops bg color from leaking outside the border: */
 }
+
+@mixin mobile {
+  @media only screen and (max-width: 766px) and (max-height: 766px) {
+    @content;
+  }
+}
