--- a/elements/Card/style.scss
+++ b/elements/Card/style.scss
@@ -2,9 +2,13 @@
 @import '../../sass/mixins';
 
 .card {
-  width: 31.25rem;
+  width: 100%;
+  height: 100%;
   background-color: $color__background--secondary;
-  margin: 0 3.375rem;
   height: 31.875rem;
   @include border-radius(0.5rem);
+  @include mobile {
+    height: 100%;
+    overflow: auto;
+  }
 }
