--- a/components/Confirm/style.scss
+++ b/components/Confirm/style.scss
@@ -10,6 +10,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 2rem;
+  z-index: 999;
   &__text {
     margin-bottom: 2rem;
     font-size: 1.5rem;
@@ -21,6 +22,7 @@
     width: 100vw;
     height: 100vh;
     position: fixed;
-    background-color: rgba(0,0,0,0.7)
+    background-color: rgba(0,0,0,0.7);
+    z-index: 999;
   }
 }
