--- a/components/List/style.scss
+++ b/components/List/style.scss
@@ -1,4 +1,5 @@
 @import '../../sass/vars';
+@import '../../sass/mixins';
 .list {
   padding: 0;
   margin: 0;
@@ -39,6 +40,12 @@
         pointer-events: none;
       }
     }
+  }
+}
+
+.hide-mobile {
+  @include mobile {
+    display: none;
   }
 }
 
