--- a/components/Slider/style.scss
+++ b/components/Slider/style.scss
@@ -3,12 +3,11 @@
 
 .slider{
   &__container{
-    max-height: 50px;
     max-height: 70vh;
     overflow: hidden;
     position: relative;
     width: 60rem;
-    height: 33rem;
+    height: 35rem;
     margin: 0 auto;
     @include mobile {
       width: 90vw;
@@ -32,7 +31,7 @@
       width: 1.25rem;
       height: 1.25rem;
       float: left;
-      transition: all 1000ms ease;
+      transition: opacity 1000ms ease;
       &.active {
         opacity: 1;
       }
@@ -41,7 +40,6 @@
   & > ul {
     transition: all 1000ms ease;
     padding: 0;
-    margin: 0;
     white-space: nowrap;
     position: absolute;
     margin-left: 10.5rem;
@@ -58,6 +56,7 @@
       width: 32rem;
       opacity: .6;
       margin: 0 3.125rem;
+      
       &.active {
         opacity: 1;
       }
