--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,4 +1,4 @@
-* { box-sizing: border-box }
+* { box-sizing: border-box; color: #fff;}
 
 body {
   background-color: $color__background--primary;
@@ -15,7 +15,7 @@ body {
     font-weight: bold;
     text-transform: uppercase;
     font-size: 0.8rem;
-    transition: all 300ms;
+    // transition: all 300ms;
     cursor: pointer;
     &--white {
       border-color: #fff;
