--- a/components/Slider/style.scss
+++ b/components/Slider/style.scss
@@ -38,11 +38,12 @@
     }
   }
   & > ul {
-    transition: all 1000ms ease;
+    transition: left 1000ms ease;
     padding: 0;
     white-space: nowrap;
     position: absolute;
     margin-left: 10.5rem;
+    left:0;
     @include mobile {
       margin: 0;
     }
@@ -54,9 +55,9 @@
       max-height: 70vh;
       height: 100vh;
       width: 32rem;
-      opacity: .6;
+      opacity: .3;
       margin: 0 3.125rem;
-      
+      transition: opacity 1000ms ease;
       &.active {
         opacity: 1;
       }
